<resources>
    <string name="app_name">PTZ</string>
    <string name="ptzctrl">PTZ Control</string>
    <string name="ptz_none">Hide PTZ</string>
    <string name="ptz_test">test view</string>
    <string name="ptzleft">PTZ Left</string>
    <string name="ptzright">PTZ Right</string>
    <string name="ptzdown">PTZ Down</string>
    <string name="ptzupleft">PTZ Upper Left</string>
    <string name="ptzupright">PTZ Upper Right</string>
    <string name="ptzcircle">PTZ Circle</string>
    <string name="ptzdownleft">PTZ Down Left</string>
    <string name="ptzdownright">PTZ Down Right</string>
    <string name="username">user name</string>
    <string name="login">登录</string>
    <string name="loginHint">Click to login</string>
    <string name="userpassword">user password</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="administrator">admin</string>
    <string name="title_activity_video_display">VideoDisplay</string>
    <string name="deviceip" translatable="false">Input IP like 192.168.1.1</string>
    <string name="ipSample">192.168.1.1</string>
    <string name="zoomout">ZoomOut</string>
    <string name="zoomin">ZoomIn</string>
    <string name="qrscan">QRScan</string>
</resources>
